--- a/Kalória/index.html
+++ b/Kalória/index.html
@@ -9,12 +9,9 @@
 </head>
 
 <body>
-    <span>
         <h3>Gulyásleves</h3>
-    </span><span>
-        <h3>Kalória:</h3>
-    </span>
-<h4>Macro igény szintentartáshoz:</h4>
+        
+<h4>Macro igény szintentartáshoz (nem eddzésnél, férfi):</h4>
     <h5 >Fehérje: <span id="fehérje"></span></h5>
     <h5 >Szénhidrát: <span id="szénhidrát"></span></h5>
     <h5 >Zsír: <span id="zsír"></span></h5>
@@ -23,25 +20,42 @@
 
     <ul>
         <li> <span id="marha">60</span>  marhalábszár </li>
-        <li> <span id="egyéb" >30</span> dkg vöröshagyma</li>
-        <li> <span id="egyéb" >2</span> nagy db sárgarépa</li>
-        <li> <span id="egyéb" >1</span> nagy db fehérrépa</li>
-        <li> <span id="egyéb" >1</span> kis db zeller</li>
+        <li> <span id="hagyma" >30</span>g vöröshagyma</li>
+        <li> <span id="répa" >2</span>g sárgarépa</li>
+        <li> <span id="frépa" >1</span>g fehérrépa</li>
+        <li> <span id="zeller" >1</span>g zeller</li>
         <li> <span id="krumpli" >40</span> burgonya (tisztított)</li>
-        <li> <span id="egyéb" >1</span> ek fűszerpaprika (csapott, édesnemes)</li>
-        <li> <span id="egyéb" >0.5</span> ek csípős fűszerpaprika</li>
-        <li> <span id="egyéb" >1</span> ek só (csapott)</li>
-        <li> <span id="egyéb" >1</span> teáskanál őrölt fűszerkömény</li>
-        <li> <span id="egyéb" >2</span> db babérlevél</li>
-        <li> <span id="egyéb" >1</span> teáskanál fekete bors (frissen őrölt)</li>
-        <li> <span id="egyéb" >1</span> kis db paradicsom</li>
-        <li> <span id="egyéb" >1</span> db tv paprika</li>
-        <li> <span id="egyéb" >3</span> gerezd fokhagyma (magyar)</li>
+        <li> <span id="füszerPaprika" >1</span>evőkanál fűszerpaprika (csapott, édesnemes)</li>
+        <li> <span id="csípősFűszerPaprika" >0.5</span> teáskanál csípős fűszerpaprika</li>
+        <li> <span id="só" >1</span> ek só (csapott)</li>
+        <li> <span id="kömény" >1</span> teáskanál őrölt fűszerkömény</li>
+        <li> <span id="babér" >2</span> db babérlevél</li>
+        <li> <span id="bors" >1</span> teáskanál fekete bors (frissen őrölt)</li>
+        <li> <span id="paradicsom" >1</span>g paradicsom</li>
+        <li> <span id="paprika" >1</span>g tv paprika</li>
+        <li> <span id="fokhagyma" >3</span>g fokhagyma (magyar)</li>
         <li> <span id="sertésZsír" >2 </span> sertészsír (mangalica)</li>
-        <li> <span id="egyéb" > 0.5</span> csokor petrezselyem</li>
-        <li> <span id="egyéb" >5</span> db zellerlevél</li>
+        <li> <span id="petrezselyem" > 0.5</span> csokor petrezselyem</li>
+        <li> <span id="zellerlevél" >5</span>db zellerlevél</li>
     </ul>
     <script src="/Kalória/kaloria.js"></script>
 </body>
 
 </html>
+
+
+<!--400g krumpli az 1 egész a növelt vagy csökkentett érték, az hányszorosa az eredetinek?
+600g hus az 1 egész a növelt vagy csökkentett érték hány százaléka az eredetinek
+
+420g hús az 30%-os csökkenés
+1217g krumpli az 300%-s emelkedés
+
+300g vörösh = 120kcal 25gch 4gf
+2 nagy sárgarépa 144g = 58 kcal 12gch 2gf
+1 fehér répa 61g = 20kcal 3gch
+1 zeller 40g = 12kcal 2ch
+1 paradicsom közepes 75g = 14kcal 3gch
+1 db tv paprika 50g = 10kcal 2g ch
+3 gerezd fokhagyma 12g = 18kcal 4gch
+Össz kcal= 262
+össz ch = 51g
