--- a/Kalória/index.html
+++ b/Kalória/index.html
@@ -20,22 +20,22 @@
     <h4>Hozzávalók:</h4>
 
     <ul>
-        <li> <span id="marha">60</span>  marhalábszár </li>
-        <li> <span id="hagyma" >30</span>g vöröshagyma</li>
-        <li> <span id="répa" >2</span>g sárgarépa</li>
-        <li> <span id="frépa" >1</span>g fehérrépa</li>
-        <li> <span id="zeller" >1</span>g zeller</li>
-        <li> <span id="krumpli" >40</span> burgonya (tisztított)</li>
+        <li> <span id="marha">60</span>  marhalábszár <span id="marha2" ></span> </li>
+        <li> <span id="hagyma" >30</span>g vöröshagyma <span id="hagyma2" ></span> </li>
+        <li> <span id="répa" >2</span>g sárgarépa <span id="répa2" ></span> </li>
+        <li> <span id="frépa" >1</span>g fehérrépa <span id="frépa2" ></span> </li>
+        <li> <span id="zeller" >1</span>g zeller <span id="zeller2" ></span> </li>
+        <li> <span id="krumpli" >40</span> burgonya (tisztított) <span id="krumpli2" ></span> </li>
         <li> <span id="füszerPaprika" >1</span>evőkanál fűszerpaprika (csapott, édesnemes)</li>
         <li> <span id="csípősFűszerPaprika" >0.5</span> teáskanál csípős fűszerpaprika</li>
         <li> <span id="só" >1</span> ek só (csapott)</li>
         <li> <span id="kömény" >1</span> teáskanál őrölt fűszerkömény</li>
         <li> <span id="babér" >2</span> db babérlevél</li>
         <li> <span id="bors" >1</span> teáskanál fekete bors (frissen őrölt)</li>
-        <li> <span id="paradicsom" >1</span>g paradicsom</li>
-        <li> <span id="paprika" >1</span>g tv paprika</li>
-        <li> <span id="fokhagyma" >3</span>g fokhagyma (magyar)</li>
-        <li> <span id="sertésZsír" >2 </span> sertészsír (mangalica)</li>
+        <li> <span id="paradicsom" >1</span>g paradicsom <span id="paradicsom2" ></span> </li>
+        <li> <span id="paprika" >1</span>g tv paprika <span id="paprika2" ></span> </li>
+        <li> <span id="fokhagyma" >3</span>g fokhagyma (magyar) <span id="fokhagyma2" ></span> </li>
+        <li> <span id="sertésZsír" >2 </span> sertészsír (mangalica) <span id="sertésZsír2" ></span> </li>
         <li> <span id="petrezselyem" > 0.5</span> csokor petrezselyem</li>
         <li> <span id="zellerlevél" >5</span>db zellerlevél</li>
     </ul>
