--- a/Kalória/index.html
+++ b/Kalória/index.html
@@ -16,6 +16,7 @@
     <h5 >Szénhidrát: <span id="szénhidrát"></span></h5>
     <h5 >Zsír: <span id="zsír"></span></h5>
     <h5>Napi kalória szükséglet: <span id="kalóriaszükséglet"></span> Kcal </h5>
+    <h5>A súlyod: <span id="súlyod"></span> </h5>
 
     <h4>Hozzávalók:</h4>
 
